# relativity-lib

./: .gitignore  README.md  README_API_CLEANUP.md  README_QUANTUM_TESTS.md  README_TESTS.md  prueba.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt
examples/: 01_basic_kinematics.py  02_symbolic_kinematics.py  03_particles_and_photons.py  04_events_worldlines.py  05_dynamics_energy_momentum.py  06_doppler_decay.py  07_plotting_basic.py  08_plotting_worldline.py  README.md  _helpers.py  quickstart.py  run_all_examples.py
examples/tarea1/: 01_eventos_simultaneos.py  02_senal_luminosa.py  03_viaje_astronautas.py  04_pelota_golf_satelite.py  05_proton_antiproton.py  06_intervalo_spacelike.py  07_doppler.py  08_perseguir_particula_foton.py  09_mision_berius.py  10_rapidez_estrellas.py  README.md  RESULTADOS_TAREA1.md  _tarea1_common.py  run_all_tarea1.py
examples/tarea2/: 01_fuerza_perpendicular.py  02_tevatr_protones.py  03_derivacion_beta.py  04_agujero_negro_energia.py  05_aniquilacion_electron_positron.py  06_decaimiento_kaon.py  README.md  RESULTADOS_TAREA2.md  _tarea2_common.py  run_all_tarea2.py
relativity/: __init__.py  constants.py  utils.py
relativity.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
relativity/math/: __init__.py  lorentz.py  minkowski.py  tensors.py
relativity/physics/: event.py  (+7 more)
tests/: conftest.py  test_imports.py  test_known_regressions.py  test_math_lorentz_minkowski.py  test_physics_objects.py  test_plotting.py  test_public_api.py  test_quantum_modules.py  test_sr_dynamics_doppler_decay.py  test_sr_kinematics.py  test_utils.py
(+25 files in other folders)
