[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "relativity"
version = "0.1.0"
description = "Special relativity physics library"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "sympy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["relativity*"]